SFDCProject/src/objects/DocuSign_Tab_Management__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SROps</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DocuSignTemplate__c</fullName>
        <label>DocuSign Template</label>
        <referenceTo>DocuSign_Template__c</referenceTo>
        <relationshipLabel>DocuSign Tab Managements</relationshipLabel>
        <relationshipName>DocuSign_Tab_Managements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DocuSign_Tag__c</fullName>
        <label>DocuSign Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tab_Category__c</fullName>
        <label>Tab Category</label>
        <picklist>
            <picklistValues>
                <fullName>Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Group Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sign Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FullName Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number Tab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date Signed Tab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DocuSign Tab Management</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DS-{000}</displayFormat>
        <label>DocuSign Tab Management Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Tab Managements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>